Fixed about you hidden behind page header

--- a/app/assets/stylesheets/general.less
+++ b/app/assets/stylesheets/general.less
@@ -120,6 +120,7 @@ form {
   padding: 10px;
   padding-top: 28px;
   background-color: white;
+  z-index: 9001;
   
   .signout-button {
     margin-top: 12px;
